# medical-chatbot-using-datascience-azureaisearch

./: Copy_of_DatascienceDA.ipynb  README.md  arch3.html
medicalchatbot-using-datascience-azureaisearch-main/medicalchatbot-using-datascience-azureaisearch-main/GENAIAZURE2/: app.py  chatbot.py  combined_data.csv  datainsert.py  main.py  pyproject.toml  qa_dataset_with_id.csv  rayan.py  requirements.txt
